# text_tone_service

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.docker/: Dockerfile.api  Dockerfile.backend  Dockerfile.frontend
Docker/backend/: Dockerfile
Docker/frontend/: Dockerfile
frontend/: Dockerfile  tone_app.py
src/: Dockerfile  app.py
src/api/routes/: healthcheck.py  predict.py  router.py
src/models/: healthcheck.py  requests.py
src/services/: model.py  utils.py
